<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="wsn_monitor_app">WSN监控软件</string>
    <string name="welcome">欢迎使用无线传感器网络监测软件</string>
    <string name="wsn_query_page">请选择你要监测的内容</string>
    <string name="wsn_result_page">结果页面</string>
    <string name="wsn_setting_page">设置页面</string>
    <string name="wsn_temp">温度</string>
    <string name="wsn_humidity">湿度</string>
    <string name="wsn_speed">水流</string>
    <string name="wsn_power">能量</string>
    <string name="wsn_co">CO</string>
    <string name="wsn_co2">CO2</string>
    <string name="wsn_pressure">水压</string>
    <string name="wsn_light">光强</string>
    <string name="wsn_cancel_all_sensors">反选</string>
    <string name="wsn_all_sensors">全选</string>
    <string name="ok">确认</string>
    <string name="back">返回</string>
    <string name="back_to_main">主菜单</string>
    <string name="wsn_location_up">上游</string>
    <string name="wsn_location_down">中游</string>
    <string name="wsn_location_center">下游</string>
    <string name="query">查询</string>
    <string name="store">存储到本地</string>
    <string name="update">刷新数据</string>
    <string name="wsnstructActivity">点击查询整个网络结构</string>
    <string name="monitorActivity">当前服务器与协调器通信状况:</string>
    <string name="subscriptionActivity">请选择你要控制的家电</string>
    <string name="locationActivity">这里可以查询地理信息</string>
    <string name="settingActivity">这里设置软件的一些常规配置</string>
    <string name="helpActivity">这里提供软件操作帮助</string>
    <string name="aboutActivity">以下是WSNMonitor所使用到开源组件:</string>
    <string name="registerActivity">请填写你的注册信息</string>
    <string name="registerInfo1">账号长度3—6位,使用英文字母或数字</string>
    <string name="registerInfo2">密码长度3—6位,使用英文字母或数字</string>
    <string name="registerInfo3">请再次输入密码</string>
    <string name="registerSubmit">提        交</string>
    <string name="registerReset">重        置</string>
    <string name="registerReback">返       回</string>
    <string name="loginregister">注        册</string>
    <string name="loginsubmit">登         入</string>
    <string name="loginInfo">请填写你的登入信息</string>
    <string name="loginexit">退        出 </string>
    <string name="monitorQueryStatus">点击查询</string>
    <string name="monitorControlStatus">控制服务器与协调器串口通信</string>
    <string name="monitorControlStatusConfirm">确    定</string>
    <string name="taskbegin">taskbegin</string>
    <string name="querycancel">取消</string>
    <string name="registerEmail">请输入合法邮箱，用于推送服务</string>
    <string name="registeremailrule">请输入合法邮箱</string>
    <string name="wsnstructrefresh">刷新</string>
    <string name="wsnnodeid1">No.1</string>
    <string name="wsnnodeid2">No.2</string>
    <string name="wsnnodeid3">No.3</string>
    <string name="wsnnodeid4">No.4</string>
    <string name="wsnnodeid5">No.5</string>
    <string name="graphbuttonearly">更早的数据</string>
    <string name="graphbuttonlate">更多数据</string>
    <string name="graphbuttonreback">返        回</string>
    <string name="settings">推送设置</string>
    <string name="texttopology">文本显示</string>
    <string name="graphictopology">图形显示</string>
    <string name="refreshtopology">刷新网络结构</string>
    <string name="nt_state_textview">状态指示</string>
    <string name="picdraw">picdraw</string>
    <string name="light_on">继电器已开</string>
    <string name="light_off">继电器已关</string>
    <string name="node_activity">节点工作中</string>
    <string name="node_sleep">节点休眠中</string>
    <string name="nodeControlButton">设    定</string>
    <string name="tempSetting">温度℃</string>
    <string name="voltageSetting">电压v</string>
    <string name="network_not_connected">网络连接失败，请检查网络设置</string>
    <string name="host_excepetion">服务器可能异常，请稍后再试</string>
    <string name="json_parser_failed">数据解析异常</string>
    <string name="io_exception_error">文件流异常</string>
    <string name="http_status_code_error">网络异常，错误码：%d</string>
    <string name="http_exception_error">网络异常，请求超时</string>
    <string name="socket_exception_error">网络异常，读取数据超时</string>
    <string name="app_run_code_error">应用程序运行时异常</string>
    <string name="pull_to_refresh_pull_label">下拉可以刷新</string>
    <string name="pull_to_refresh_release_label">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中…</string>
    <string name="pull_to_refresh_tap_label">下拉可以刷新</string>
    <string name="pull_to_refresh_update">最近更新：</string>
    <string name="load_more">更多</string>
    <string name="load_ing">加载中···</string>
    <string name="load_full">已加载全部</string>
    <string name="load_empty">暂无数据</string>
    <string name="load_error">加载数据出错</string>


</resources>